--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="review.html"> Leave a Review</a></li>
@@ -151,7 +151,7 @@
         <br><br>
 
         <form action="">
-            <input type="email" name="email" placeholder="Enter your email">
+            <input class="boxf" type="email" name="email" placeholder="Enter your email">
             <button type="submit">Submit</button>
         </form>
 
