add a button on each product

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <div class="products">
         <div class="item">
             <figure>
-               <p> <img src="img/generator2.webp" width="147" height="162" alt="generator" title="generator"></p>
+               <div> <img src="img/generator2.webp" width="147" height="162" alt="generator" title="generator" alt="Generator" ></div>
                 <figcaption>Generator</figcaption>
-                <P>XAF 300.000</P>
+                <strong><div class="amount">XAF 300.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -48,7 +49,9 @@
             <figure>
                 <p><img src="img/blenders.webp" alt="Blender" title="Blender"></p>
                 <figcaption>Blender</figcaption>
-                <P>XAF 25.000</P>
+               <strong> <div class="amount">XAF 25.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
+            
             </figure>
         </div>
 
@@ -56,7 +59,8 @@
             <figure>
                 <p><img src="img/cooker.webp" alt="Cooker" title="Cooker"></p>
                 <figcaption>Cooker</figcaption>
-                <p>XAF 20.000</p>
+               <strong> <div class="amount">XAF 20.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -64,7 +68,8 @@
             <figure>
                 <p><img src="img/felicity-120ah-solar-battery-charge-controller_1.02.webp" alt="Solar" title="Solar"></p>
                 <figcaption>Solar</figcaption>
-                <P>XAF 500.000</P>
+                <strong><div class="amount">XAF 500.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -72,7 +77,8 @@
             <figure>
                 <img src="img/lg-10hp-ac-installation-kit-10hp-kit_1.0.webp" alt="installation-kit-" title="installation-kit-">
                 <figcaption>installation-kit-</figcaption>
-                <P>XAF20.000</P>
+                <strong><div class="amount">XAF20.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -81,7 +87,8 @@
             <figure>
                 <img src="img/microphone-stand-djustble-with-three-leg_1.0.webp" alt="microphone-stand" title="microphone-stand">
                 <figcaption>microphone-stand</figcaption>
-                <P>XAF 100.000</P>
+                <strong><div class="amount">XAF 100.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -89,7 +96,8 @@
             <figure>
                 <img src="img/ovens-scanfrost-20-litre-microwave-oven_1.0.webp" alt="ovens-scanfrost-20-litre-microwave-oven_" title="ovens-scanfrost-20-litre-microwave-oven_">
                 <figcaption>ovens-scanfrost-20-litre-microwave-oven_</figcaption>
-                <P>XAF 50.000</P>
+                <strong><div class="amount">XAF 50.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -97,7 +105,8 @@
             <figure>
                 <img src="img/ref.webp" alt="Refrigerator" title="Refrigerator">
                 <figcaption>Refrigerator</figcaption>
-                <P>XAF 250.000</P>
+                <strong><div class="amount">XAF 250.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -105,7 +114,8 @@
             <figure>
                 <img src="img/restpoint-2-hp-window-unit-air-conditioner_1.0.webp" alt="air-conditioner" title="air-conditioner">
                 <figcaption>air-conditioner</figcaption>
-                <P>XAF 150.000</P>
+                <strong><div class="amount">XAF 150.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -114,7 +124,8 @@
                 <img src="img/samsung-640-liters-side-by-side-refrigerator-grey-black-rs64r5331b4_1.0.webp" alt="samsung-640" title="samsung-640">
 
                 <figcaption>samsung-640</figcaption>
-                <P>250.000</P>
+                <strong><div class="amount">250.000</div>
+                <div></strong> <button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -122,15 +133,17 @@
             <figure>
                 <img src="img/sound-systems-sony.webp" alt="sound-systems" title="sound-systems">
                 <figcaption>sound-systems</figcaption>
-                <P>XAF 120.000</P>
+                <strong><div class="amount">XAF 120.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
         <div class="item">
             <figure>
-                <img src="img/tv.webp" alt="TV" title="TV">
+                <img src="img/tv.jpg" alt="TV" title="TV">
                 <figcaption>TV</figcaption>
-                <P>XAF 110.000</P>
+             <strong><div class="amount">XAF 110.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
 
@@ -138,7 +151,8 @@
             <figure>
                 <img src="img/washing-machine.webp" alt="washing-machine" title="washing-machine">
                 <figcaption>washing-machine</figcaption>
-                <P>XAF 350.000</P>
+                <strong><div class="amount">XAF 350.000</div></strong>
+                <div><button class="add-button">Add to Cart</button></div>
             </figure>
         </div>
     </div>
