made logo and search bar fixed using js

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <head>
 
-
-
-    <header>
+    <header class="sticky-nav">
         <div class="logo">
             <p>YOUNGSTAR ELECTRONICS LTD</p>
         </div>
@@ -22,17 +19,19 @@
             </form>
         </div>
     </header>
+    
+    <div >
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="review.html"> Leave a Review</a></li>
-        </ul>
-    </nav>
-    <h1>Get Quality Electronics at Afortable Prices</h1>
-</head>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="review.html"> Leave a Review</a></li>
+            </ul>
+        </nav>
+        <h1>Get Quality Electronics at Afortable Prices</h1>
+    </div>
 
 <main>
     <div class="products">
@@ -171,5 +170,7 @@
 
     </div>
 </footer>
+
+<script src="js/products.js"></script>
 </body>
 </html>
