reduced the size of search bar and added a div with height before logo bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<div class="space"></div>
 
     <header class="sticky-nav">
         <div class="logo">
@@ -20,9 +21,9 @@
         </div>
     </header>
     
-    <div >
+    <div>
 
-        <nav>
+        <nav class="pages">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
